--- a/Giffy/Giffy.Droid/packages.config
+++ b/Giffy/Giffy.Droid/packages.config
@@ -11,6 +11,7 @@
   <package id="Xam.Plugin.Iconize" version="1.0.10" targetFramework="monoandroid70" />
   <package id="Xam.Plugin.Iconize.Ionicons" version="1.0.10" targetFramework="monoandroid70" />
   <package id="Xam.Plugin.Iconize.Material" version="1.0.10" targetFramework="monoandroid70" />
+  <package id="Xam.Plugins.VideoPlayer" version="1.0.0-pre07" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid70" />
@@ -19,5 +20,7 @@
   <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid70" />
+  <package id="Xamarin.FFImageLoading" version="2.2.6-pre-241" targetFramework="monoandroid70" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.2.6-pre-241" targetFramework="monoandroid70" />
   <package id="Xamarin.Forms" version="2.3.3.166-pre4" targetFramework="monoandroid70" />
 </packages>
