--- a/Giffy/Giffy/packages.config
+++ b/Giffy/Giffy/packages.config
@@ -9,5 +9,8 @@
   <package id="Xam.FormsPlugin.Iconize" version="1.0.10" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xam.Plugin.Connectivity" version="2.2.12" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xam.Plugin.Iconize" version="1.0.10" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xam.Plugins.VideoPlayer" version="1.0.0-pre07" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xamarin.FFImageLoading" version="2.2.6-pre-241" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.2.6-pre-241" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.3.166-pre4" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
