--- a/Giffy/Giffy/packages.config
+++ b/Giffy/Giffy/packages.config
@@ -12,5 +12,6 @@
   <package id="Xam.Plugins.VideoPlayer" version="1.0.0-pre07" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.FFImageLoading" version="2.2.6-pre-241" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.FFImageLoading.Forms" version="2.2.6-pre-241" targetFramework="portable45-net45+win8+wp8+wpa81" />
-  <package id="Xamarin.Forms" version="2.3.3.166-pre4" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xamarin.FFImageLoading.Transformations" version="2.2.5" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xamarin.Forms" version="2.3.3.168" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
