--- a/Giffy/Giffy.Droid/packages.config
+++ b/Giffy/Giffy.Droid/packages.config
@@ -22,5 +22,6 @@
   <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid70" />
   <package id="Xamarin.FFImageLoading" version="2.2.6-pre-241" targetFramework="monoandroid70" />
   <package id="Xamarin.FFImageLoading.Forms" version="2.2.6-pre-241" targetFramework="monoandroid70" />
+  <package id="Xamarin.FFImageLoading.Transformations" version="2.2.5" targetFramework="monoandroid70" />
   <package id="Xamarin.Forms" version="2.3.3.166-pre4" targetFramework="monoandroid70" />
 </packages>
