--- a/Giffy/Giffy.Droid/packages.config
+++ b/Giffy/Giffy.Droid/packages.config
@@ -9,6 +9,7 @@
   <package id="Xam.FormsPlugin.Iconize" version="1.0.10" targetFramework="monoandroid70" />
   <package id="Xam.Plugin.Connectivity" version="2.2.12" targetFramework="monoandroid70" />
   <package id="Xam.Plugin.Iconize" version="1.0.10" targetFramework="monoandroid70" />
+  <package id="Xam.Plugin.Iconize.FontAwesome" version="1.0.10" targetFramework="monoandroid70" />
   <package id="Xam.Plugin.Iconize.Ionicons" version="1.0.10" targetFramework="monoandroid70" />
   <package id="Xam.Plugin.Iconize.Material" version="1.0.10" targetFramework="monoandroid70" />
   <package id="Xam.Plugins.VideoPlayer" version="1.0.0-pre07" targetFramework="monoandroid70" />
